--- a/JobboardFront/src/app/pages/auth/reset/reset.component.html
+++ b/JobboardFront/src/app/pages/auth/reset/reset.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="box">
     <div class="left">
-      <img src="/assets/job.jpg" alt="Job" class="job" width="500" height="500">
+      <img src="/job.jpg" alt="Job" class="job" >
     </div>
     <div class="right">
       <div class="title">
@@ -10,17 +10,19 @@
       <form class="formulaire" [formGroup]="resetForm" (ngSubmit)="onSubmit()">
 
         <input type="password" formControlName="password" placeholder="Password" class="input-field">
-        <small *ngIf="submitted && resetForm.controls['password'].errors?.['minlength']" class="error-text">
+        <small *ngIf="hasError('password', 'minlength')" class="error-text">
           Password must be at least 6 characters
         </small>
 
         <input type="password" formControlName="confirmPassword" placeholder="Confirm your Password" class="input-field">
-        <small *ngIf="submitted && resetForm.errors?.['mismatch']" class="error-text">
-          Passwords do not match
+        <small *ngIf="hasError('password', 'required')" class="error-text">
+          Password is required
         </small>
 
         <button type="submit"  class="btn">Login</button>
       </form>
+
+
     </div>
   </div>
 </div>
