--- a/JobboardFront/src/app/pages/auth/reset/reset.component.html
+++ b/JobboardFront/src/app/pages/auth/reset/reset.component.html
@@ -1,7 +1,11 @@
 <div class="container">
   <div class="box">
     <div class="left">
-      <img src="/job.jpg" alt="Job" class="job" >
+      <img src="/joboffers.gif" alt="Job Hunt Animation" class="job"/>
+      <p class="attribution">
+        <a href="https://storyset.com/job" target="_blank" rel="noopener noreferrer">
+        </a>
+      </p>
     </div>
     <div class="right">
       <div class="title">
@@ -19,7 +23,14 @@
           Password is required
         </small>
 
-        <button type="submit"  class="btn">Login</button>
+        <button type="submit" class="btn" [disabled]="resetForm.invalid || isLoading">
+          <ng-container *ngIf="!isLoading; else loading">
+            Login
+          </ng-container>
+          <ng-template #loading>
+            <span class="spinner"></span> Login...
+          </ng-template>
+        </button>
       </form>
 
 
