--- a/JobboardFront/src/app/pages/auth/signup/signup.component.css
+++ b/JobboardFront/src/app/pages/auth/signup/signup.component.css
@@ -1,7 +1,7 @@
 
 
 .container {
-  background: linear-gradient(to bottom, #9C9CE0, #cfd6fb);
+  background: linear-gradient(to bottom, #CF95D9, #455A64);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,26 +21,30 @@
   display: flex;
 }
 .job{
-  margin-top: 45px;
-  height: 400px;
-  width: 500px;
+  margin-top: 35px;
+  margin-bottom: 45px;
+  height: 450px;
+  width: 450px;
+
 }
 
 
 .right {
+  margin-top: 10px;
+  margin-left: 50px;
   width: 400px;
-
   padding: 20px;
   border-radius: 10px;
-  margin-top: 20px;
+
   text-align: center;
 }
 
 .title {
   font-size: 25px;
-  color: #4C4BB4;
+  color: #74417D;
   font-family: 'Josefin Sans', sans-serif ;
-  margin-bottom: 30px;
+  margin-bottom: 35px;
+
 }
 
 .social-login {
@@ -50,11 +54,11 @@
 
 .google-button {
   display: flex;
-  color: #4C4BB4;
+  color: #455A64;
   align-items: center;
   justify-content: center;
   background: white;
-  border: 1px solid #f40909;
+  border: 1px solid #CF95D9;
   padding: 10px;
   width: 90%;
   font-size: 14px;
@@ -63,8 +67,8 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 .google-button:hover {
-    transform: scale(1.1);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  transform: scale(1.1);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 .google-icon {
   width: 20px;
@@ -75,7 +79,7 @@
 .or-text {
   margin: 15px 0;
   font-size: 14px;
-  color: #4C4BB4;
+  color: #74417D;
 }
 
 .formulaire {
@@ -88,7 +92,7 @@
   width: 90%;
   padding: 10px;
   margin: 8px 0;
-  border: 1px solid #4C4BB4 ;
+  border: 1px solid #455A64;
   border-radius: 5px;
   font-size: 14px;
 }
@@ -96,11 +100,10 @@
 .btn {
   width: 90%;
   padding: 12px;
-  background: #E74C3C;
+  background: #B16668;
   color: white;
   font-size: 16px;
-  border: 2px solid;
-  border-color: white;
+  border: 2px solid white;
   border-radius: 5px;
   cursor: pointer;
   margin-top: 15px;
@@ -108,7 +111,7 @@
 }
 
 .btn:hover {
-  background: #c0392b;
+  background: #74417D;
   transform: scale(1.1);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 
@@ -123,11 +126,11 @@
 .little-text {
   margin-top: 25px;
   font-size: 14px;
-  color: #4C4BB4;
+  color: #455A64;
 }
 
 .switch {
-  color: #E74C3C;
+  color: #74417D;
   text-decoration: none;
   font-weight: bold;
   font-size: 16px;
@@ -139,11 +142,29 @@
   font-size: 24px;
 }
 .error-text {
-  color:#E74C3C;
+  color: #f40909;
   font-size: 15px;
   margin-top: 5px;
   display: block;
 }
+.spinner {
+  width: 16px;
+  height: 16px;
+  border: 2px solid #fff;
+  border-top: 2px solid transparent;
+  border-radius: 50%;
+  display: inline-block;
+  animation: spin 0.6s linear infinite;
+  margin-right: 6px;
+  vertical-align: middle;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 
 
 
