--- a/JobboardFront/src/app/pages/auth/signup/signup.component.html
+++ b/JobboardFront/src/app/pages/auth/signup/signup.component.html
@@ -1,7 +1,11 @@
 <div class="container">
   <div class="box">
     <div class="left">
-      <img src="/job.jpg" alt="Job" class="job">
+      <img src="/joboffers.gif" alt="Job Hunt Animation" class="job"/>
+      <p class="attribution">
+        <a href="https://storyset.com/job" target="_blank" rel="noopener noreferrer">
+        </a>
+      </p>
     </div>
     <div class="right">
       <div class="title">Sign up with Jobboard!</div>
@@ -16,31 +20,39 @@
 
       <form class="formulaire" [formGroup]="signupForm" (ngSubmit)="onSubmit()" novalidate>
         <input id="email" type="email" formControlName="email" placeholder="Email" class="input-field" >
-        <small *ngIf="hasError('email', 'required')" class="error-text">
-          Email is required
-        </small>
+        <div class="error-text " *ngIf="hasError('email', 'required')">
+          <i class="fas fa-exclamation-circle"></i> Email is required
+        </div>
+
         <small *ngIf="hasError('email', 'email')" class="error-text">
-          Invalid email format
+          <i class="fas fa-exclamation-circle"></i> Invalid email format
         </small>
 
         <input id="password" type="password" formControlName="password" placeholder="Password" class="input-field" >
         <small *ngIf="hasError('password', 'required')" class="error-text">
-          Password is required
+          <i class="fas fa-exclamation-circle"></i> Password is required
         </small>
         <small *ngIf="hasError('password', 'minlength')" class="error-text">
-          Password must be at least 6 characters
+          <i class="fas fa-exclamation-circle"></i> Password must be at least 6 characters
         </small>
 
         <input id="confirmPassword" type="password" formControlName="confirmPassword" placeholder="Confirm your Password" class="input-field" >
 
         <small *ngIf="hasError('confirmPassword', 'required')" class="error-text">
-          Confirm Password is required
+          <i class="fas fa-exclamation-circle"></i> Confirm Password is required
         </small>
-        <small *ngIf="signupForm.errors?.['mismatch']" class="error-text">
-          Passwords do not match
+        <small *ngIf="signupForm.hasError('mismatch') && signupForm.get('confirmPassword')?.touched" class="error-text">
+          <i class="fas fa-exclamation-circle"></i> Password do not match
         </small>
 
-        <button type="submit" class="btn" [disabled]="signupForm.invalid">Sign up</button>
+        <button type="submit" class="btn" [disabled]="signupForm.invalid || isLoading">
+          <ng-container *ngIf="!isLoading; else loading">
+            Sign Up
+          </ng-container>
+          <ng-template #loading>
+            <span class="spinner"></span>Signing up...
+          </ng-template>
+        </button>
       </form>
 
       <p class="little-text">Already have an account? <a routerLink="/login" class="switch">Sign in</a></p>
