--- a/JobboardFront/src/app/pages/offres/offres-list/offres-list.component.html
+++ b/JobboardFront/src/app/pages/offres/offres-list/offres-list.component.html
@@ -1,15 +1,31 @@
-<img src="/background.png" class="background-image" alt="background">
+
 
 <div class="job-container">
 
     <div class="search-bar">
-        <input type="text" [(ngModel)]="searchKeyword" placeholder="Keywords">
-        <input type="text" [(ngModel)]="searchLocation" placeholder="Location">
-        <button class="search" (click)="searchJobs()" >
+      <div class="search-bar">
+        <div class="input-icon">
+          <i class="fas fa-search"></i>
+          <input
+            type="text"
+            [(ngModel)]="searchKeyword"
+            (ngModelChange)="applyFilters()"
+            placeholder="Keywords"
+          />
+        </div>
 
-            Search</button>
+        <div class="input-icon">
+          <i class="fas fa-map-marker-alt"></i>
+          <input
+            type="text"
+            [(ngModel)]="searchLocation"
+            (ngModelChange)="applyFilters()"
+            placeholder="Location"
+          />
+        </div>
+
+      </div>
     </div>
-
 
     <div class="content">
 
