--- a/JobboardFront/src/styles.css
+++ b/JobboardFront/src/styles.css
@@ -5,38 +5,39 @@ html, body {
   height: 100%;
   overflow: hidden;
 }
+
+
 .toast-center-custom {
   top: 10% !important;
   left: 50% !important;
   transform: translate(-50%, -50%) !important;
-  position: fixed !important;
-  z-index: 9999 !important;
-  background-color: #b9bdf1 !important;
-  color: white !important;
-  font-weight: bold !important;
-  border-radius: 10px !important;
-  padding: 15px 20px !important;
-  text-align: center !important;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2) !important;
 }
 
+.ngx-toastr {
+  pointer-events: none;
+}
 
-.toast-info {
-  background-color: #A9A8E7 !important;
-  color: white !important;
+.toast {
+  margin: 0 !important;
+  padding: 10px;
+  border-radius: 6px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #333;
+  color: #fff;
+}
+
+.toast.ngx-toastr.toast-success,
+.toast.ngx-toastr.toast-error,
+.toast.ngx-toastr.toast-info,
+.toast.ngx-toastr.toast-warning {
+  opacity: 1;
 }
 .toast-success {
-  background-color: #28a745 !important;
-  color: white !important;
+  background-color: #CF95D9 !important; /* Vert */
+  color: #fff !important;
 }
-
 .toast-error {
-  background-color: #E74C3C !important;
-  color: white !important;
+  background-color: #B16668 !important; /* Rouge */
+  color: #fff !important;
 }
-.toast-warning {
-  background-color: #ffc107 !important;
-  color: black !important;
-}
-
 
